--- a/site/package.json
+++ b/site/package.json
@@ -12,7 +12,8 @@
     "web-vitals": "^2.1.4",
     "@material-ui/core": "4.11.0",
     "@material-ui/styles": "4.10.0",
-    "@material-ui/icons": "^4.11.2"
+    "@material-ui/icons": "^4.11.2",
+    "isomorphic-unfetch": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
