- generate stub set of articles - minor polish

--- a/article-service/src/main/resources/application.yml
+++ b/article-service/src/main/resources/application.yml
@@ -18,5 +18,6 @@ spring:
       on-profile: local
 
 application:
-  acticlesYamlPath: C:/dev/projects/devcompanion/article-service/src/test/resources/articles-repo-sample
+#  acticlesYamlPath: C:/dev/projects/devcompanion/article-service/src/test/resources/articles-repo-sample
+  acticlesYamlPath: C:/dev/projects/devcompanion/articles-stub-repo
 
