--- a/article-service/src/test/resources/application-test.yml
+++ b/article-service/src/test/resources/application-test.yml
@@ -1,5 +1,5 @@
 application:
-  acticlesYamlPath: src/test/resources/articles-repo-sample
+  acticles-yaml-path: src/test/resources/articles-repo-sample
 
 logging:
   level:
