- logs to kibana sample done, but disabled

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,59 @@ services:
       - ARTICLES_REPO_PATH=/usr/local/article-repo
     depends_on:
       - storage
+    labels:
+      collect_logs_with_filebeat: "true"
+      decode_log_event_to_json_object: "true"
 
   frontend:
     build: ./site
     ports:
       - "3000:3000"
 
+#ELK works somehow, but lags way too much to work with on laptop :(
+#  elasticsearch:
+#    image: docker.elastic.co/elasticsearch/elasticsearch:7.2.0
+#    ports:
+#      - "9200:9200"
+#    environment:
+#      - "discovery.type=single-node"
+#    volumes:
+#      - elasticsearch-data:/usr/share/elasticsearch/data:rw              # Persistence data
+#
+#  logstash:
+#    image: docker.elastic.co/logstash/logstash:7.2.0
+#    ports:
+#      - "25826:25826"
+#      - "5044:5044"
+#    volumes:
+#      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro                # Pipeline configuration
+#    restart: on-failure
+#    depends_on:
+#      - elasticsearch
+#
+#  kibana:
+#    image: docker.elastic.co/kibana/kibana:7.2.0
+#    ports:
+#      - "5601:5601"
+#    restart: on-failure
+#    depends_on:
+#      - elasticsearch
+#
+#  filebeat:
+#    image: docker.elastic.co/beats/filebeat:7.2.0
+#    volumes:
+#      - ./filebeat/filebeat.docker.yml:/usr/share/filebeat/filebeat.yml:ro # Configuration file
+#      - /var/lib/docker/containers:/var/lib/docker/containers:ro           # Docker logs
+#      - /var/run/docker.sock:/var/run/docker.sock:ro                       # Additional information about containers
+#      - filebeat-data:/usr/share/filebeat/data:rw                        # Persistence data
+#    user: root                                                             # Allow access to log files and docker.sock
+#    command: filebeat -e -strict.perms=false #to fix: Exiting: error loading config file: config file ("filebeat.yml") can only be writable by the owner but the permission s
+#    restart: on-failure
+#    depends_on:
+#      - logstash
+
+
 volumes:
   article-repo-volume:
+  filebeat-data:
+  elasticsearch-data:
