--- a/article-service/src/main/resources/application.yml
+++ b/article-service/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+spring:
+  application:
+    name: article-service
+
+server:
+  port: 8080
+
 application:
   articles-max-response-limit: 1000
   articles-default-response-limit: 20
