--- a/article-service/src/main/resources/application.yml
+++ b/article-service/src/main/resources/application.yml
@@ -11,11 +11,6 @@ application:
 
   acticles-yaml-path: ${ARTICLES_REPO_PATH}
 
-  ## to disable swagger ui on prod
-  #springdoc:
-  #  swagger-ui:
-  #    enabled: false
-
 ---
 spring:
   config:
@@ -25,3 +20,12 @@ spring:
 application:
   acticles-yaml-path: C:/dev/projects/devcompanion/articles-repo
 
+---
+spring:
+  config:
+    activate:
+      on-profile: docker
+
+springdoc:
+  swagger-ui:
+    enabled: false
