--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,6 @@ services:
     image: hipravin/devcompanion-gateway
     expose:
       - "8080"
-    ports:
-      - "8080:8080"
     labels:
       collect_logs_with_filebeat: "true"
       decode_log_event_to_json_object: "true"
@@ -83,5 +81,5 @@ services:
 
 volumes:
   article-repo-volume:
-  filebeat-data:
-  elasticsearch-data:
+#  filebeat-data:
+#  elasticsearch-data:
