--- a/playground/playground-spring/pom.xml
+++ b/playground/playground-spring/pom.xml
@@ -35,6 +35,25 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>8.5.7</version>
+                <configuration>
+                    <schemas>
+                        <schema>car_portal_app</schema>
+                    </schemas>
+                    <url>jdbc:postgresql://localhost:5432/playground</url>
+                    <user>postgres</user>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.postgresql</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <version>42.3.3</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 
