- comment about how to provide password to flyway

--- a/playground/playground-spring/pom.xml
+++ b/playground/playground-spring/pom.xml
@@ -45,6 +45,8 @@
                     </schemas>
                     <url>jdbc:postgresql://localhost:5432/playground</url>
                     <user>postgres</user>
+                    <!--  mvn ... -Dflyway.password=s3cret ...-->
+                    <!--<password>s3cret</password> -->
                 </configuration>
                 <dependencies>
                     <dependency>
