enable actuator, bump spring version, add few articles

--- a/article-service/src/main/resources/application.yml
+++ b/article-service/src/main/resources/application.yml
@@ -11,6 +11,14 @@ application:
 
   acticles-yaml-path: ${ARTICLES_REPO_PATH}
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  server:
+    port: 8083
+
 ---
 spring:
   config:
