--- a/Dockerfile-deprecated
+++ b/Dockerfile-deprecated
@@ -1,3 +1,3 @@
 FROM alpine:3.14
 RUN rm -rf /usr/local/article-repo
-COPY ./articles-repo /usr/local/article-repo
+COPY article-repo /usr/local/article-repo
