--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 8080
 
+  tomcat:
+    accesslog:
+      enabled: true
 spring:
   cloud:
     gateway:
@@ -25,6 +28,12 @@ management:
     web:
       exposure:
         include: "*"
+
+  endpoint:
+    health:
+      probes:
+        enabled: true
+
   server:
     port: 8081
 
