--- a/article-repo/misc/jackson-javascript-date.yml
+++ b/article-repo/misc/jackson-javascript-date.yml
@@ -13,7 +13,7 @@ codeBlocks:
     code: |-
       @JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "yyyy-MM-dd'T'HH:mm:ss.SSSXXX")
       private Date meetingTimeDate;
-  - title: Java 8 witout jackson (e.g. '2022-03-10T11:48:56.7972052+03:00')
+  - title: Java 8 without jackson (e.g. '2022-03-10T11:48:56.7972052+03:00')
     code: |-
       OffsetDateTime now = OffsetDateTime.now();
       String formatterIso = DateTimeFormatter.ISO_OFFSET_DATE_TIME.format(now);
