--- a/k8s/article-repo-pv.yml
+++ b/k8s/article-repo-pv.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   storageClassName: manual
   capacity:
-    storage: 1Gi
+    storage: 100M
   accessModes:
     - ReadWriteOnce
   hostPath:
