--- a/article-service/src/main/resources/application.yml
+++ b/article-service/src/main/resources/application.yml
@@ -62,15 +62,21 @@ spring:
   boot:
     admin:
       client:
-        url: http://localhost:8070
+        url: #http://localhost:8070
         username: admin
         password: admin
         instance:
-          management-base-url: http://localhost:8083
+          management-base-url: #http://localhost:8083
 
 
 ARTICLES_REPO_PATH: "C:/dev/projects/devcompanion/article-repo"
-KEYCLOAK_URL: "http://keycloak.hipravin.ru:8080"
+KEYCLOAK_URL: "http://host.docker.internal:8080"
+
+logging:
+  level:
+    org.springframework: DEBUG
+    org.springframework.security: TRACE
+
 
 ---
 spring:
