--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,15 @@ services:
     ports:
       - "80:80"
 #    restart: unless-stopped
+
+
+  redis:
+    image: redis:7
+    container_name: redis
+    ports:
+      - 6379:6379
+
+
 #ELK works somehow, but lags way too much to work with on laptop :(
 #  elasticsearch:
 #    image: docker.elastic.co/elasticsearch/elasticsearch:7.2.0
