--- a/site/package.json
+++ b/site/package.json
@@ -13,7 +13,8 @@
     "@material-ui/core": "4.11.0",
     "@material-ui/styles": "4.10.0",
     "@material-ui/icons": "^4.11.2",
-    "isomorphic-unfetch": "^3.0.0"
+    "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
