--- a/article-service/pom.xml
+++ b/article-service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.0</version>
+        <version>2.7.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.hipravin.devcompanion</groupId>
@@ -16,6 +16,8 @@
     <properties>
         <java.version>17</java.version>
         <git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version>
+        <spring-boot-admin.version>2.7.4</spring-boot-admin.version>
+
         <!--        <timestamp>${maven.build.timestamp}</timestamp>-->
         <!--        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>-->
     </properties>
@@ -26,6 +28,14 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>2021.0.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-dependencies</artifactId>
+                <version>${spring-boot-admin.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -76,7 +86,6 @@
         <dependency>
             <groupId>de.codecentric</groupId>
             <artifactId>spring-boot-admin-starter-client</artifactId>
-            <version>2.4.1</version>
         </dependency>
 
         <dependency>
