--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>admin</module>
         <module>gateway</module>
         <module>article-service</module>
+        <module>repo-service</module>
     </modules>
 
     <build>
