--- a/repo-service/src/main/resources/application.yml
+++ b/repo-service/src/main/resources/application.yml
@@ -85,8 +85,12 @@ KEYCLOAK_URL: "http://host.docker.internal:8080"
 
 logging:
   level:
-    org.springframework: DEBUG
-    org.springframework.security: TRACE
+    com.hipravin: DEBUG
+    org.springframework: INFO
+    org.springframework.security: INFO
+
+application:
+  repo-path: C:/dev/projects/tutorials
 
 ---
 spring:
