--- a/repo-service/src/test/resources/application-test.yml
+++ b/repo-service/src/test/resources/application-test.yml
@@ -16,6 +16,7 @@ spring:
         generate_statistics: true
 logging:
   level:
+    com.hipravin: DEBUG
     org.hibernate.SQL: DEBUG
 #    org.hibernate.type.descriptor.sql: TRACE
 
