improve repo search

--- a/repo-service/src/main/resources/application.yml
+++ b/repo-service/src/main/resources/application.yml
@@ -90,7 +90,7 @@ logging:
     org.springframework.security: INFO
 
 application:
-  repo-path: C:/dev/projects/tutorials
+  repo-path: C:/dev/projects
 
 ---
 spring:
