feign client initials, move repo dto to separate module, basic security

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>domain/domain-repo</module>
+
         <module>admin</module>
         <module>gateway</module>
         <module>article-service</module>
