--- a/repo-service/src/test/resources/application-test.yml
+++ b/repo-service/src/test/resources/application-test.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.hsqldb.jdbc.JDBCDriver
-    url: jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1;sql.syntax_pgs=true
+    url: jdbc:hsqldb:mem:testdb;sql.syntax_pgs=true
     username: sa
     password:
 
@@ -23,5 +23,16 @@ logging:
 
     org.springframework: INFO
 
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
+        loggerLevel: basic
+
 application:
   repo-path: src/test/resources/test-repo-root
+
+#repo-service.url: "http://localhost:8182/"
+repo-service.url: "http://localhost:${local.server.port}/"
